--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,24 +5,20 @@
 <link href="/css/bootstrap.min.css" rel="stylesheet">
 <script src="/js/bootstrap.bundle.min.js"></script>
 
-<!--  PROJETO DO PAULO VITOR DA TURMA B-->
+<!--  Projeto Do Victor Marubio-->
 
 </head>
 <body>
 
 <div class="container">
-
-
-
 <h2>Gestor de Tarefas</h2>
-
 <form action="/adicionar" method="post">
   <label for="fname">Nome da Tarefa:</label><br>
-  <input type="text" id="nomeTarefa" name="nomeTarefa">
+  <input type="text" id="nomeTarefa" name="nomeTarefa" required>
   <input type="submit" class="btn btn-success" value="Adicionar">
 </form> 
 
-<table class="table table-striped mt-3">
+<table class="table table-striped mt-3"> 
   <tr>
     <th>Nome Tarefa</th>
     <th>Status</th>
@@ -32,13 +28,14 @@
 
      
   </tr>
-  <tr th:each = "tarefa : ${tarefas}">
+    <tr th:each = "tarefa : ${tarefas}">
     <td th:text = "${tarefa.nomeTarefa}"></td>
     <td th:text = "${tarefa.status}"></td>
-    <td th:text = "${tarefa.dataInicio}"></td>
+    <td th:text = "${#temporals.format(tarefa.dataInicio, 'dd-MM-yyyy')}"></td>
+    <td th:text = "${#temporals.format(tarefa.dataFim, 'dd-MM-yyyy')}"></td>
     <td th:text = "${tarefa.dataFim}"></td>
     <td>
-    <a th:href="@{/editar/{id}(id =${tarefa.id})}" class="btn btn-secondary">EditarVI</a>
+    <a th:href="@{/editar/{id}(id =${tarefa.id})}" class="btn btn-secondary">Editar</a>
     <a th:href="@{/encerrar/{id}(id =${tarefa.id})}" class="btn btn-warning">Encerrar</a>
     <a th:href="@{/excluir/{id}(id =${tarefa.id})}" class="btn btn-danger">Excluir</a>
     </td>
